[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jonathon Tech", email = "jonathon.tech@icfnext.com"},
]
dependencies = [
    "quart>=0.18.3",
    "requests>=2.28.1",
]
requires-python = ">=3.10"
license = {text = "License-LICENSE"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm.scripts]
start.cmd = "quart run"
start.env = { QUART_APP = "src/api:run" }
lint = "flake8"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.3",
    "flake8>=5.0.4",
]
